2012-09-25  Roland McGrath  <roland@hack.frob.com>

	* Makefile.in (all, install): Declare with .PHONY.
	Reported by Michael Hope <michael.hope@linaro.org>.

2012-09-25  Tulio Magno Quites Machado Filho  <tuliom@linux.vnet.ibm.com>

	* manual/platform.texi (PowerPC): Document __ppc_get_timebase_freq.
	* sysdeps/powerpc/sys/platform/ppc.h: Include the operating
	system header.
	* sysdeps/unix/sysv/linux/powerpc/Makefile (sysdep_headers):
	Likewise.
	(sydep_routines): Add the new and the internal functions.
	* sysdeps/unix/sysv/linux/powerpc/bits/ppc.h: New file.
	* sysdeps/unix/sysv/linux/powerpc/get_timebase_freq.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/Versions
	(GLIBC_2.17): Add the new function.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/fpu/nptl/libc.abilist
	(GLIBC_2.17): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/Versions
	(GLIBC_2.17): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/nptl/libc.abilist
	(GLIBC_2.17): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/test-gettimebasefreq.c: New file.

2012-09-25  Alan Modra  <amodra@gmail.com>

	* sysdeps/unix/sysv/linux/powerpc/pthread_once.c (__pthread_once):
	Add release barrier before setting once_control to say
	initialisation is done.  Add hints on lwarx.  Use macro in
	place of isync.
	(clear_once_control): Add release barrier.

2012-09-25  Joseph Myers  <joseph@codesourcery.com>

	[BZ #13629]
	* math/s_clog.c (__clog): Handle more values close to |z| = 1
	specially.
	* math/s_clog10.c (__clog10): Likewise.
	* math/s_clog10f.c (__clog10f): Likewise.
	* math/s_clog10l.c (__clog10l): Likewise.
	* math/s_clogf.c (__clogf): Likewise.
	* math/s_clogl.c (__clogl): Likewise.
	* math/Makefile (libm-calls): Add x2y2m1.
	* sysdeps/generic/math_private.h (__x2y2m1f): Declare.
	(__x2y2m1): Likewise.
	(__x2y2m1l): Likewise.
	* sysdeps/ieee754/dbl-64/x2y2m1.c: New file.
	* sysdeps/ieee754/dbl-64/x2y2m1f.c: Likewise.
	* sysdeps/ieee754/ldbl-128/x2y2m1l.c: Likewise.