@@ -1775,6 +1775,7 @@ GLIBC_2.16
 GLIBC_2.17
  GLIBC_2.17 A
  secure_getenv F
+ __ppc_get_timebase_freq F
 GLIBC_2.2
  GLIBC_2.2 A
  _IO_adjust_wcolumn F
