@@ -10,11 +10,11 @@ Version 2.17
 * The following bugs are resolved with this release:
 
   1349, 3479, 5044, 5400, 6778, 6808, 9685, 9914, 10014, 10038, 11607,
-  13412, 13542, 13629, 13679, 13696, 13717, 13939, 13966, 14042, 14090,
-  14150, 14151, 14154, 14157, 14166, 14173, 14195, 14237, 14252, 14283,
-  14298, 14303, 14307, 14328, 14331, 14336, 14337, 14347, 14349, 14459,
-  14476, 14505, 14510, 14516, 14518, 14519, 14532, 14538, 14544, 14545,
-  14562, 14576, 14579, 14583, 14587, 14621.
+  13412, 13542, 13629, 13679, 13696, 13717, 13741, 13939, 13966, 14042,
+  14090, 14150, 14151, 14154, 14157, 14166, 14173, 14195, 14237, 14252,
+  14283, 14298, 14303, 14307, 14328, 14331, 14336, 14337, 14347, 14349,
+  14459, 14476, 14505, 14510, 14516, 14518, 14519, 14530, 14532, 14538,
+  14544, 14545, 14562, 14576, 14579, 14583, 14587, 14621.
 
 * Support for STT_GNU_IFUNC symbols added for s390 and s390x.
   Optimized versions of memcpy, memset, and memcmp added for System z10 and
